crates/parsing/tests/snapshots/grammar_tests__expect_parse@record-update-branch.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/expression/record-update-branch.input
---
Input: a { b { c = 0 } }

Start { kind: RecordUpdate }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Start { kind: Wrapped }
    Token { kind: LeftBracket }
    Start { kind: Separated }
      Start { kind: RecordUpdateBranch }
        Start { kind: Name }
          Token { kind: Label }
        Finish
        Start { kind: Wrapped }
          Token { kind: LeftBracket }
          Start { kind: Separated }
            Start { kind: RecordUpdateLeaf }
              Start { kind: Name }
                Token { kind: Label }
              Finish
              Token { kind: Equal }
              Start { kind: LiteralExpression }
                Token { kind: LiteralInteger }
              Finish
            Finish
          Finish
          Token { kind: RightBracket }
        Finish
      Finish
    Finish
    Token { kind: RightBracket }
  Finish
Finish

