crates/parsing/tests/snapshots/grammar_tests__expect_parse@true-binder.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/true-binder.input
---
Input: true
Start { kind: LiteralBinder }
  Token { kind: LiteralTrue }
Finish

