crates/parsing/tests/snapshots/grammar_tests__expect_parse@typed-binder.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/typed-binder.input
---
Input: 1 :: Type
Start { kind: TypedBinder }
  Start { kind: LiteralBinder }
    Token { kind: LiteralInteger }
  Finish
  Token { kind: Colon2 }
  Start { kind: ConstructorType }
    Token { kind: Upper }
  Finish
Finish

