crates/parsing/tests/snapshots/grammar_tests__false-binder.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: false
Start { kind: LiteralBinder }
  Token { kind: LiteralFalse }
Finish

