crates/parsing/tests/snapshots/grammar_tests__forall-type-plain-kinded.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: forall (a :: Type). Type
Start { kind: ForallType }
  Token { kind: ForallKw }
  Start { kind: OneOrMore }
    Start { kind: TypeVariableBinding }
      Start { kind: Wrapped }
        Token { kind: LeftParenthesis }
        Start { kind: Labeled }
          Start { kind: Prefixed }
            Start { kind: Name }
              Token { kind: Lower }
            Finish
          Finish
          Token { kind: Colon2 }
          Start { kind: ConstructorType }
            Token { kind: Upper }
          Finish
        Finish
        Token { kind: RightParenthesis }
      Finish
    Finish
  Finish
  Token { kind: Period }
  Start { kind: ConstructorType }
    Token { kind: Upper }
  Finish
Finish

